# ritm

./: Cargo.toml  LICENSE  README.md  turing_machine.tm  turing_test.tm
.github/workflows/: deploy.yml  rust.yml
gui/: Cargo.toml  Trunk.toml  index.html
gui/docs/: gui.js  index.html
gui/src/: app.rs  lib.rs  main.rs  turing.rs  ui.rs
gui/src/ui/: code.rs  component.rs  constant.rs  control.rs  edit.rs  font.rs  graph.rs  palette.rs  popup.rs  ribbon.rs  settings.rs  theme.rs  utils.rs
gui/src/ui/component/: button.rs  combobox.rs  grid.rs
gui/src/ui/graph/: state.rs  transition.rs  transition_edit.rs
gui/src/ui/popup/: help.rs  setting.rs  state_edit.rs  transition_edit.rs
resources/: turing2.tm  turing3.tm  turing_test.tm
ritm_core/: Cargo.toml
ritm_core/resources/: binary_palindrome.tm  turing2.tm  turing3.tm  turing5.tm  turing6.tm  turing7.tm  turing_test.tm
ritm_core/src/: lib.rs  main.rs  parser.rs  turing_errors.rs  turing_graph.rs  turing_machine.pest  turing_machine.rs  turing_parser.rs  turing_ribbon.rs  turing_state.rs  turing_tape.rs
ritm_core/tests/: parser_test.rs  turing_graph_test.rs  turing_machine_test.rs  turing_state_test.rs
ritm_repl/: Cargo.toml  README.md  test.tm
ritm_repl/src/: choice_modes.rs  lib.rs  main.rs  ripl_error.rs
ritm_repl/src/modes/: choice_modes.rs  execute_mode.rs  mod.rs  modify_mode.rs  starting_modes.rs
src/: lib.rs  main.rs  parser.rs  test_parser.rs  turing.rs  turing_errors.rs  turing_machine.pest  turing_machine.rs  turing_ribbon.rs  turing_state.rs
turingrs/: Cargo.toml  README.md
turingrs/resources/: turing2.tm  turing4.tm  turing_test.tm
turingrs/src/: lib.rs  main.rs  turing_errors.rs  turing_ribbon.rs
