[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[dependencies]
eframe = "0.31.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
egui_flex = "0.3.0"
egui_infinite_scroll = "0.7.0"
egui_animation = "0.8.0"
rand = "0.9.0"
log = "0.4"
ritm_core = { path = "../ritm_core" }
egui-colorgradient = "0.2.0"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" 

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
