[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[dependencies]
eframe = "0.32.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
egui = "0.32.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
egui_flex = "0.4.0"
egui_infinite_scroll = "0.7.0"
egui_animation = "0.8.0"
rand = "0.9.0"
log = "0.4"
ritm_core = { path = "../ritm_core" }
egui-colorgradient = "0.2.0"
unicode-segmentation = "1.12.0"
rfd = "0.15.3"
poll-promise = {version="0.3.0", features=["web"]}
wasm-bindgen-futures = "0.4"
egui_alignments = "0.3.4"
web-sys = { version = "*", features = ["Window", "Url", "File", "Blob", "HtmlAnchorElement", "BlobPropertyBag", "FilePropertyBag"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
regex = "1.11.1"



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = {version="0.3.70", features = ["Worker"]}

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 2
