[package]
name = "ritm_repl"
description = "A package used to experiment with turing machine with k ribbons."
authors = ["Foucart Axel"]
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
ctrlc = "3.4.7"
ritm_core = { version = "0.1.0", path = "../ritm_core" }
rustyline = "16.0.0"
strum = "0.27.2"
strum_macros = "0.27.2"
